# CLTG

./: .env.example  .gitignore  README.md  _check_db.py  _migrate_test.py  _result.txt  pyproject.toml  schema.sql  update_bot.sh
bot/: config.py  keyboards.py  main.py  middlewares.py
bot/handlers/: __init__.py  _common.py  admin.py  document.py  photo.py  text.py
bot/utils/: db.py  errors.py  html.py  log.py  prompts.py  reminders.py
bot/utils/anthropic/: chat.py  models.py
deploy/: install.sh
deploy/searxng/: settings.yml
deploy/systemd/: cltg-bot.service  cltg-update.service  cltg-update.timer
